# MANTRA

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
mantra/: __init__.py
mantra/analysis/: __init__.py  cache.py  embedding.py  enrichment.py  metrics.py
mantra/data/: __init__.py  synthetic.py
mantra/inference/: __init__.py  callbacks.py
mantra/model/: __init__.py  core.py
mantra/plotting/: __init__.py  embeddings.py  factors.py
mantra/preprocessing/: __init__.py  anndata.py  transform.py
mantra/tests/: __init__.py  conftest.py  test_cache.py  test_callbacks.py  test_data.py  test_embedding_analysis.py  test_model.py  test_numerical_consistency.py  test_plotting_new.py  test_preprocessing.py  test_save_load.py
mantra/utils/: __init__.py  gpu.py  seeds.py
scripts/: generate_golden_dev.py  generate_golden_references.py  validate_consistency.py
tests/: golden_dev_references.pkl  golden_references.pkl
tutorials/: 01_quickstart.ipynb  02_single_cell_rna.ipynb  03_cite_seq_protein.ipynb  04_advanced_features.ipynb  05_mixed_order.ipynb  SynthData.ipynb  pseudobulk_tutorial.ipynb
