[project]
name = "mantra"
version = "0.1.0"
description = "MANTRA: Multi-view ANalysis with Tensor and matRix Alignment"
authors = [
    { name = "Kevin De Azevedo", email = "deazevedo@med.uni-frankfurt.de" },
    { name = "Yusuf Berk Oruc" },
    { name = "Florian Buettner", email = "florian.buettner@dkfz-heidelberg.de" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["tensor-decomposition", "bayesian-inference", "multi-omics", "factor-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=2.0.0,!=2.0.1",
    "pyro-ppl>=1.8.6,<2",
    "numpy>=1.25.1,<2",
    "pandas>=2.0.0",
    "scipy>=1.14.1,<2",
    "mudata>=0.2.3",
    "scanpy>=1.10.4",
    "scikit-learn>=1.4.0,<2",
    "tqdm>=4.60.0",
]

[dependency-groups]
dev = [
    "seaborn>=0.12.2",
    "matplotlib>=3.7.0",
    "graphviz>=0.20.1,<1",
    "jupyterlab>=4.0.4,<5",
    "tensorly>=0.8.1,<1",
]
analysis = [
    "hdbscan>=0.8.33,<1",
    "leidenalg>=0.10.2,<1",
    "pynndescent>=0.5.11,<1",
    "gseapy>=1.1.5,<2",
    "scikit-misc>=0.5.1,<1",
    "mygene>=3.2.2,<4",
]
lint = [
    "black>=24.4.2,<25",
    "ruff>=0.4.4,<1",
    "mypy>=1.10.0,<2",
    "pre-commit>=3.7.0,<4",
]
test = [
    "pytest>=8.2.0,<9",
    "pytest-cov>=5.0.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mantra"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "C4", "I", "N", "PIE", "RUF", "SIM", "TCH", "UP"]
# Ignore naming rules for mathematical notation (A1, A2, A3, R, X, Y) and PyTorch F convention
ignore = ["N803", "N806", "N812"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["mantra"]

[tool.pytest.ini_options]
testpaths = ["mantra/tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mantra"]
omit = ["mantra/tests/*", "tests/*"]
